Adds backfill option to GSI audits report endpoint
